# renpy-mcp-creator

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  plan-spec-mode.md  product-design-proposal.md  pyproject.toml  start.bat
dashboard/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  AppShell.test.tsx  AppShell.tsx  main.tsx
desktop/: electron-builder.yml  package-lock.json  package.json  tsconfig.json
desktop/src/: backendProcess.test.ts  backendProcess.ts  main.ts  paths.test.ts  paths.ts  ports.test.ts  ports.ts
docs/: README.md  ROADMAP.md  code-quality-convergence-plan.md  dual-agent-design.md  e2e-diagnostic-repair-plan.md  p1-remaining-issues.md  stepwise-generation-concrete-design.md  tier4-stepwise-generation-with-import-design.md  ui-redesign-analysis.md  vn-engineering-middleware-gap-analysis.md
docs/archive/: [COMPLETED]-2026-04-15-validation-milestones.md  [COMPLETED]-2026-04-24-e2e-diagnostic-tool.md  [COMPLETED]-2026-04-26-agent-led-refinement-intake-design.md  [COMPLETED]-2026-04-26-narrative-improvement-plan.md  (+17 more)
new_design/: 00-project-brief.md  01-scheme-a-side-by-side.md  02-scheme-b-bottom-chat.md  03-scheme-c-left-ai-sidebar.md  04-comparison-matrix.md
scripts/: download_sdk.py  download_sdk_daemon.py  download_web_support.py  e2e_dashboard_full_test.py  e2e_dashboard_websocket_test.py  mock_ws_server.py  smoke_test_dashscope_image.py  smoke_test_kimi.py  test_dashscope_complex.py
src/renpy_mcp/: config.py  main.py  (+3 more)
tests/: conftest.py
(+255 files in other folders)
