[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renpy-mcp-creator"
version = "0.1.0"
description = "Local-first Ren'Py engineering and prototype generation toolkit for Chinese creators"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "fastapi>=0.111.0",
    "itsdangerous>=2.2.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "watchdog>=4.0.0",
    "pillow>=10.3.0",
    "jinja2>=3.1.0",
    "google-genai>=0.3.0",
    "rembg>=2.0.0",
    "onnxruntime>=1.16.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.35.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tui = ["textual>=0.70.0"]
packaging = ["pyinstaller>=6.14.0,<7.0.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
renpy-mcp = "renpy_mcp.main:main"
renpy-webui = "renpy_mcp.web.standalone:main"
vn-creator = "renpy_mcp.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/renpy_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
